<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Product Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Product Name"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <!-- Name field -->
            <EditText
                android:id="@+id/product_name_textview"
                android:hint="name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

    </LinearLayout>
    <!-- Price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/price_label"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:text="$"/>
            <!-- price field -->
            <EditText
                android:id="@+id/price_textview"
                android:hint="@string/price_edti_text_hint"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </RelativeLayout>

    </LinearLayout>
<!-- Quantity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <!-- Name field -->
            <EditText
                android:id="@+id/quantity_textview"
                android:hint="number on hand"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

    </LinearLayout>
    <!--Supplier Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Supplier Name"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <!-- Name field -->
            <EditText
                android:id="@+id/supplier_name_textview"
                android:hint="supplier"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>
    <!--Supplier Phone-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="Supplier Phone"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <!-- Name field -->
            <!--dummy phone number for now-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_parenthesis"/>
            <EditText
                android:id="@+id/supplier_phone_area_code_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="3"
                style="@style/EditorFieldStyle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_parenthesis"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"/>
            <EditText
                android:id="@+id/supplier_phone_prefix_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"/>
            <EditText
                android:id="@+id/supplier_phone_suffix_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


           <!-- <EditText
                android:id="@+id/supplier_phone_number_textview"
                android:hint="phone"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />-->
        </LinearLayout>

    </LinearLayout>

</LinearLayout>